tests/Checker/everything/errors/27a.vc
void a(int a) { return; }

int main() {
    a(3.0);
    return 1;
}
